fix dark mode text

--- a/styles.css
+++ b/styles.css
@@ -155,5 +155,5 @@ form button {
 
 .projects article p {
   font-size: 1em;
-  color: #333;
+  color: canvastext
 }
